src/objects/Forecasting_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Sales Forecasting Settings</description>
    <fields>
        <fullName>Lease_With_SREC_Close_Rate_DC__c</fullName>
        <description>Lease With SREC Close Rate - DC</description>
        <inlineHelpText>Lease With SREC Close Rate - DC</inlineHelpText>
        <label>Lease With SREC Close Rate - DC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lease_With_SREC_Close_Rate_MA__c</fullName>
        <description>Lease With SREC Close Rate - MA</description>
        <inlineHelpText>Lease With SREC Close Rate - MA</inlineHelpText>
        <label>Lease With SREC Close Rate - MA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lease_With_SREC_Close_Rate_MD__c</fullName>
        <description>Lease With SREC Close Rate - MD</description>
        <inlineHelpText>Lease With SREC Close Rate - MD</inlineHelpText>
        <label>Lease With SREC Close Rate - MD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lease_With_SREC_Close_Rate_NJ__c</fullName>
        <description>Lease With SREC Close Rate - NJ</description>
        <inlineHelpText>Lease With SREC Close Rate - NJ</inlineHelpText>
        <label>Lease With SREC Close Rate - NJ</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lease_With_SREC_Close_Rate_OH__c</fullName>
        <description>Lease With SREC Close Rate - OH</description>
        <inlineHelpText>Lease With SREC Close Rate - OH</inlineHelpText>
        <label>Lease With SREC Close Rate - OH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lease_With_SREC_Close_Rate_PA__c</fullName>
        <description>Lease With SREC Close Rate - PA</description>
        <inlineHelpText>Lease With SREC Close Rate - PA</inlineHelpText>
        <label>Lease With SREC Close Rate - PA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Forecasting Settings</label>
</CustomObject>